# Pyxel-Physics-Engine

./: pyproject.toml
examples/: 0_ball.py  0_gravity.py  1_many_objects.py  1_reflect.py  2_action.py  3_load_resource.py  4_debug_mode.py  5_menu.py  action.py
examples/assets/: 5_resource.pyxres
src/pyxphys/: __init__.py  app.py  collision.py  constants.py  core.py  engine.py  resolver.py  utils.py  world.py
