[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxel-physics"
version = "0.1.0"
description = "GameObject and Physics framework for Pyxel"
readme = "README.md"
authors = [{ name = "Hishi057", email = "Hiratsuka512@icloud.com" }]
dependencies = [
    "pyxel",
    "math"
]

[tool.setuptools.packages.find]
where = ["src"]